# tlab-google

./: README.md  requirements.txt  setup.cfg
.circleci/: config.yml
tests/: test_abstract.py  test_credentials.py  test_gmail.py
tlab_google/: __init__.py  abstract.py  credentials.py  gmail.py
