[metadata]
name = tlab_google
version = attr: tlab_google.__version__
author = Shuhei Nitta
author_email = huisintheta@gmail.com
url = https://github.com/Waseda-TakeuchiLab/tlab-google
description = Goolge API Wrapper for Takeuchi Lab
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE

[options]
python_requires = >= 3.10
include_package_data = True
packages = find:
test_suite = tests
install_requires = 
    google-auth
    google-auth-oauthlib
    google-api-python-client
entry_points = file: entry_points.cfg

[options.packages.find]
exclude = 
    test*

[mypy]
python_version = 3.10
ignore_missing_imports = True
strict = True

[coverage:run]
omit =
    tests/*

[flake8]
max-line-length = 119

